# space_game

./: .gitignore  Cargo.toml  README.md  shell.nix
assets/: config.json  items.json  stations.json
src/: main.rs
src/_bin/: tui.rs
src/config/: mod.rs
src/db/: database.rs  db_consts.rs  mod.rs
src/db/db_structs/: account.rs  bank.rs  hanger.rs  market.rs  mod.rs  ship_in_space.rs
src/db/injector/: galaxy_structs.rs  load_galaxy.rs  load_items.rs  load_structures.rs  mod.rs  orbit.rs  structure_structs.rs
src/galaxy/: galaxy_map.rs  mod.rs
src/galaxy/bundles/: celestials.rs  mod.rs  ships.rs  structures.rs
src/galaxy/components/: celestials.rs  container.rs  game_object.rs  gate.rs  hanger.rs  mod.rs  navigation.rs  player_controller.rs  sensor.rs  ship.rs  signature.rs  station.rs  transform.rs  warp_target.rs
src/galaxy/events/: mod.rs  net_event_events.rs  net_info_events.rs  net_state_events.rs
src/galaxy/resources/: database_resource.rs  delta_time.rs  galaxy_map.rs  mod.rs  network_handler.rs  path_to_entity.rs  star_system_table.rs
src/galaxy/runner/: init_resources.rs  mod.rs  schedule.rs
src/galaxy/systems/: docking_undocking.rs  hanger_mgmt.rs  inventory_mgmt.rs  jump.rs  logon_mgmt.rs  market.rs  mod.rs  navigation.rs  network_msg_generator.rs  path_table_bookeeping.rs  removal_hooks.rs  safe_logout.rs  sense.rs  (+1 more)
src/inventory/: inventory.rs  item.rs  mod.rs
src/network/: mod.rs  server.rs
src/shared/: mod.rs  path.rs
src/special/: mod.rs  new_player.rs
world/: db  snap.000000000000069C  snap.00000000000013F0
(+10 files in other folders)
