[package]
name = "rs_server_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.9"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
rmp-serde = "1.1"
dashmap = { version = "5.4.0", features = ["rayon", "serde" ] }
nalgebra = { version = "0.32", features = [ "serde-serialize" ]}
tungstenite = "0.18"
sled = { version = "0.34.7", features = [ "compression" ] }
rand = "0.8"
rouille = "3.6.1"
tui = "*"
crossterm = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
